--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,14 @@
 <h1>詳細</h1>
-<p><%= @post.content %></p>
-<p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
-<p><%= link_to '削除', @post, method: :delete %></p>
-<p><%= link_to '戻る', posts_path %></p>
+<div>
+    <p><%= @post.content %></p>
+    <p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
+    <p><%= link_to '削除', @post, method: :delete %></p>
+    <p><%= link_to '戻る', posts_path %></p>
+</div>
+
+<div>
+    <%= render @post.repries %>
+</div>
+
+<%= render partial: 'repries/form', locals: { repry: @repry } %>
+
