--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,44 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="main-color">
+  
+
+  <body >
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <a class="navbar-brand" href="#">tweetapp</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mr-auto">
+          <% if @current_user %>
+            <li class="nav-item">
+              <%= link_to 'ホーム', posts_path  %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'マイページ', mypage_path  %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'ログアウト', logout_path, method: :delete  %>
+            </li>  
+          <% else %>
+            <li class="nav-item">
+              <%= link_to '登録', new_user_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'ログイン', root_path %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
+    <% if flash[:notice] %>
+      <div><%= flash[:notice] %></div>
+    <% end %>
     <%= yield %>
+
   </body>
 </html>
