--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,12 +1,11 @@
-.container {
-    width:600px;
-    margin: 0 auto;
-    border-left: 2px solid rgb(55,68,76);
-    border-right: 2px solid rgb(55,68,76);
+.content , .tweet-form {
+    border: 0.5px solid rgba(134, 132, 132, 0.8);
 }
 
-.content {
-    padding: 20px;
-    border-top: 2px solid rgb(55,68,76);
-    text-align: center;
+.like-btn {
+    color: #BDBDBD;
+}
+
+.unlike-btn {
+    color: rgb(238, 125, 125);
 }
