--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,28 @@
 <div>
     <div class="container">
         <h1>ホーム</h1>
-        <a href="posts/new">ツイートする</a>
-        <% if flash[:notice] %>
-            <div><%= flash[:notice] %></div>
-        <% end %>
-        <div>
-            <% @posts.each do |post| %>
-                <div class="content">
-                    <p><%= post.id %></p>
+        <p><%= render partial: 'post_form', locals: { post: @post } %></p>
+        <% @posts.each do |post| %>
+            <div class="media content">
+                <div class="media-body">
+                    <h5 class="mt-0 font-weight-bold"><%= link_to(post.user.name, mypage_path(post.user_id)) %></h5>
+                    <p class="card_subtitle"><%= date_format(post.created_at) %></p>
                     <p><%= post.content %></p>
-                    <p><%= post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
+
+                    <% if current_user.likes.find_by(post_id: post.id) %>
+                        <%= link_to post_like_path(post,post.id), method: :delete do %>
+                            <span class="fa fa-heart unlike-btn"></span>
+                        <% end %>
+                    <% else %>
+                        <%= link_to post_likes_path(post,post.id), method: :post do %>
+                            <span class="fa fa-heart like-btn"></span>
+                        <% end %>
+                    <% end %>
+
                     <p><%= link_to '詳細', post %></p>
                     <p><%= link_to '削除', post, method: :delete %></p>
                 </div>
-            <% end %>
-        </div>
+            </div>
+        <% end %>
     </div>
 </div>
