--- a/app/views/repries/_form.html.erb
+++ b/app/views/repries/_form.html.erb
@@ -5,6 +5,6 @@
         <%= f.label :repry, 'リプライ' %>
         <%= f.text_field :repry, class: 'form-control' %>
     </div>
-    <%= f.submit 'リプライを送る', class: 'btn btn-primary' %>
+    <%= f.submit "返信する", class: 'btn btn-primary' %>
     <% end %>
-</div>　
+</div>
