--- a/app/views/repries/_repry.html.erb
+++ b/app/views/repries/_repry.html.erb
@@ -1,6 +1,9 @@
-<div class="repry_color">
-    <p><%= repry.id %></p>
-    <p><%= repry.repry %></p>
-    <p><%= repry.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
-    <p><%= link_to '削除', repry, method: :delete %></p>
-</div>　　
+
+<% @repries.each do |repry| %>
+    <div>
+        <%= repry.id %>
+        <%= repry.repry %>
+        <p><%= link_to '削除', repry, method: :delete %></p>
+        <hr>
+    </div>
+<% end %>
