--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,10 @@
     <p><%= @post.content %></p>
     
     <p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
-    <p><%= link_to '削除', @post, method: :delete %></p>
+
+    <% if post.user.id == @current_user.id %>
+        <p><%= link_to '削除', @post, method: :delete %></p>
+    <% end %>
     
 </div>
 
