--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,21 +11,12 @@
                     <p class="card_subtitle"><%= date_format(post.created_at) %></p>
                     <p><%= post.content %></p>
 
-                    <% if current_user.likes.find_by(post_id: post.id) %>
-                        <%= link_to post_like_path(post,post.id), method: :delete do %>
-                            <span class="fa fa-heart unlike-btn"></span>
-                        <% end %>
-                    <% else %>
-                        <%= link_to post_likes_path(post,post.id), method: :post do %>
-                            <span class="fa fa-heart like-btn"></span>
-                        <% end %>
-                    <% end %>
+                    <p><%= render partial: 'like', locals: { post: post } %></p>
 
                     <p><%= link_to '詳細', post %></p>
-
-                    <% if post.user.id == @current_user.id %>
-                        <p><%= link_to '削除', post, method: :delete %></p>
-                    <% end %>
+                    
+                    <p><%= render partial: 'delete', locals: { post: post } %></p>
+                    
 
                 </div>
             </div>
