--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,7 @@
     <p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
 
     <p><%= render partial: 'like', locals: { post: @post } %></p>
+    <p><%= @like_count %>
     <p><%= render partial: 'delete', locals: { post: @post } %></p>
     
 </div>
