--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -7,3 +7,6 @@
         <span class="fa fa-heart like-btn"></span>
     <% end %>
 <% end %>
+
+<% like_count = Like.where(post_id: post.id).count %>
+<%= like_count %>
