--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,18 +3,17 @@
     <i class="fas fa-arrow-left"></i>
 <% end %>
 <div>
-    <p><%= link_to(@post.user.name, mypage_path(@post.user_id)) %></p>
+    <p><%= link_to @post.user.name, user_path(@post) %></p>
     <p><%= date_format(@post.created_at) %></p>
     <p><%= @post.content %></p>
-    
     <p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
 
-    <p><%= render partial: 'like', locals: { post: @post } %></p>
+    <p><%= render partial: 'like', locals: {post: @post} %></p>
     <p><%= @like_count %>
-    <p><%= render partial: 'delete', locals: { post: @post } %></p>
+    <p><%= render partial: 'delete', locals: {post: @post} %></p>
     
 </div>
 
-<p><%= render partial: 'repries/repry', locals: { repry: @repies } %></p> 
+<p><%= render partial: 'repries/repry', locals: {repry: @repies} %></p> 
 
-<p><%= render partial: 'repries/form', locals: { repry: @repry } %></p>
+<p><%= render partial: 'repries/form', locals: {repry: @repry} %></p>
