--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,31 @@
 <p><%= @user.name %></p>
 <p><%= @user.email %></p>
 <p><%= @user.profile %></p>
+
+<p><%= render partial: 'follow_form', locals: { user: @user } %></p>
+
+<p><%= render partial: 'follow_link', locals: { user: @user } %></p>
+
 <% if @user.id == @current_user.id %>
     <p><%= link_to '編集', edit_user_path(@user) %></p>
 <% end %>
+<p>投稿数:<%= @user.posts.count %></p>
+
+<% @posts.each do |post| %>
+    <div class="media content">
+        <div class="media-body">
+            <% if post.user.image %>
+                <p><%= image_tag post.user.image.thumb70.url %></p>
+            <% else %>
+                <p><%= image_tag "assets/default.png", width: "70px" %></p>
+            <% end %>
+            <h5 class="mt-0 font-weight-bold"><%= link_to(post.user.name, "users/#{post.user.id}" ) %></h5>
+            <p class="card_subtitle"><%= date_format(post.created_at) %></p>
+            <p><%= post.content %></p>
+            <p><%= render partial: 'posts/like', locals: { post: post } %></p>
+            <p><%= @like_count %></p>
+            <p><%= link_to '詳細', post %></p>
+            <p><%= render partial: 'posts/delete', locals: { post: post } %></p>
+        </div>
+    </div>
+ <% end %>
