--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,3 +1,16 @@
 ul {
     list-style: none;
 }
+
+html, body {
+    font-family: 'Roboto', 'Helvetica', sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 400;
+}
+textarea {
+    resize: none!important;
+}
+
+
+
