--- a/app/views/application/_tweet_form.html.erb
+++ b/app/views/application/_tweet_form.html.erb
@@ -9,12 +9,11 @@
         </div>
     </header>
     <div class="tweet-form">
-        <%= form_for repry do |f| %>
-            <%= f.hidden_field :post_id %>
+        <%= form_for @post do |f| %>
             <div class="form-group"> 
-                <%= f.text_field :repry, :placeholder => "返信をツイート", class: 'form-control', row: 4 %>
+                <%= f.text_area :content, :placeholder => "今何してる？", class: 'form-control', rows: 4, cols: 30 %>
             </div>
-            <%= f.submit "返信", class: 'tweet-btn' %>
+            <%= f.submit 'ツイートする', class: 'tweet-btn' %>
         <% end %>
     </div>
 </section>
