--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,19 +4,72 @@
     <title>App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  
-
-  <body >
+  <body>
+    <div class="d-flex" id="wrapper">
+      <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-heading">
+          <% if @current_user %>
+            <%= image_tag @current_user.image.thumb70.url, style: "border-radius:50%;" %>
+            <div>
+              <span class="sidebar-name"><%= @current_user.name %></span>
+            </div>
+          <% end %>
+        </div>
+        <div class="list-group list-group-flush">
+          <% if @current_user %>
+            <%= link_to 'ホーム', posts_path, class: "list-group-item list-group-item-action bg-light" %>
+            <%= link_to 'マイページ', user_path(@current_user), class: "list-group-item list-group-item-action bg-light" %>
+            <%= link_to 'ツイートする', new_post_path, class: "list-group-item list-group-item-action bg-light" %>
+            <%= link_to 'ログアウト', logout_path, method: :delete, class: "list-group-item list-group-item-action bg-light" %>
+          <% else %>
+            <%= link_to '登録', new_user_path, class: "list-group-item list-group-item-action bg-light" %>
+            <%= link_to 'ログイン', root_path, class: "list-group-item list-group-item-action bg-light" %>
+          <% end %>
+        </div>
+      </div>
+      
+      <div id="page-content-wrapper">
+        <nav class="navbar navbar-expand navbar-light bg-light border-bottom custum-navbar">
+          
+          <button class="" id="menu-toggle"><i class="fas fa-bars"></i></button>
+          <% if @current_user %>
+          <div class="collapse navbar-expand navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item dropdown">
+                  <a class="" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+              </li>
+            </ul>
+          </div>
+          <% end %>
+        </nav>
+        
+        <div class="container">
+          <%= render partial: "application/error_messages" %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js" integrity="sha256-HcON65l89nxNl7vaRECVPe/zNDBzhCcJYBE7O+EcruU=" crossorigin="anonymous"></script>
     
-    <%= render 'header' %>
-
-    <%= yield %>
-
+    
   </body>
+  <script>
+    $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+        $("#wrapper").toggleClass("toggled")
+    });
+  </script>
 </html>
 
