--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,7 @@
 <div>
-    <div class="container">
-        <h1>ホーム</h1>
-
-        <p><%= render partial: 'post_form', locals: { post: @post } %></p>
-
-        <% @posts.each do |post| %>
-            <div class="media content">
-                <div class="media-body">
-                    <% if post.user.image %>
-                        <p><%= image_tag post.user.image.thumb70.url %></p>
-                    <% else %>
-                        <p><%= image_tag "assets/default.png", width: "70px" %></p>
-                    <% end %>
-                    <h5 class="mt-0 font-weight-bold"><%= link_to(post.user.name, "users/#{post.user.id}" ) %></h5>
-                    <p class="card_subtitle"><%= date_format(post.created_at) %></p>
-                    <p><%= post.content %></p>
-
-                    <p><%= render partial: 'like', locals: { post: post } %></p>
-                    <p><%= @like_count %></p>
-                    <p><%= link_to '詳細', post %></p>
-
-                    <p><%= render partial: 'delete', locals: { post: post } %></p>
-                    
-
-                </div>
-            </div>
-        <% end %>
+    <div>
+        <%= render partial: 'application/tweet_form', locals: { post: @post } %>
+        <p class="spacer"></p>
+        <%= render partial: 'application/posts_form', locals: { posts: @posts } %>
     </div>
 </div>
