--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,9 @@
-<h1>詳細</h1>
 <%= link_to posts_path do %>
     <i class="fas fa-arrow-left"></i>
 <% end %>
-<div>
-    <% if @post.user.image %>
-        <p><%= image_tag @post.user.image.thumb70.url %></p>
-    <% else %>
-        <p><%= image_tag "assets/default.png", width: "70px" %></p>
-    <% end %>
-    <p><%= link_to @post.user.name, user_path(@post.user) %></p>
-    <p><%= date_format(@post.created_at) %></p>
-    <p><%= @post.content %></p>
-    <p><%= @post.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
 
-    <p><%= render partial: 'like', locals: {post: @post} %></p>
-    <p><%= @like_count %>
-    <p><%= render partial: 'delete', locals: {post: @post} %></p>
-    
-</div>
+<%= render partial: 'application/post_form', locals: { post: @post } %>
 
-<p><%= render partial: 'repries/repry', locals: {repry: @repies} %></p> 
+<%= render partial: 'repries/repry', locals: {repry: @repies} %>
 
-<p><%= render partial: 'repries/form', locals: {repry: @repry} %></p>
+<%= render partial: 'repries/form', locals: {repry: @repry} %>
