rspecのテストを追加

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,12 @@
-<%= link_to posts_path do %>
-    <i class="fas fa-arrow-left"></i>
-<% end %>
+<div class="back-motion">
+    <%= link_to posts_path do %>
+        <i class="fas fa-arrow-left"></i>
+    <% end %>
+</div>
 
 <%= render partial: 'application/post_form', locals: { post: @post } %>
+
+<p class="spacer"></p>
 
 <%= render partial: 'repries/repry', locals: {repry: @repies} %>
 
