--- a/app/views/repries/_repry.html.erb
+++ b/app/views/repries/_repry.html.erb
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="post-main">
-                        <p><%= post.repry %></p>
+                        <p><%= post.content %></p>
                     </div>
                 </div>
 
