ハッシュタグ機能の追加

--- a/app/views/application/_post_form.html.erb
+++ b/app/views/application/_post_form.html.erb
@@ -18,8 +18,7 @@
                             <%= date_format(post.created_at) %>
                         </div>
                     </div>
-                    <div class="post-main">
-                        <p><%= post.content %></p>
+                    <div class="post-main"><%= render_with_tags(post.content) %></p>
                     </div>
                 </div>
 
