--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,8 +317,54 @@ body {
     border: 1px solid rgba(128, 128, 128, 0.4);
     border-radius: 10px;
 }
+.search-form {
+    width: 70%;
+    border-radius: 15px;
+    background-color: rgba(128, 128, 128, 0.2);
+    margin-top: 1rem;
+    margin-left:1rem;
+    padding:0.2rem 0.5rem 0.2rem 0.8rem;
+}
+.search-submit {
+    padding:0.2rem 0.5rem;
+    margin-left: 5%;
+    border-radius: 15px;
+    width: 15%;
+    background-color:  rgb(28,161,242);
+    color:white;
+}
 
-
+.post-count {
+    color:rgb(85, 85, 85);
+    font-size: 0.9rem;
+}
+.tag-index {
+    padding: 1rem;
+    display: flex;
+    color: black;
+    &:hover {
+        color:black;
+        text-decoration: none;
+    }
+    
+}
+.tag-mark {
+    font-size: 1.8rem;
+    font-weight: 200;
+    border-radius: 50%;
+    border:1px solid rgba(128, 128, 128, 0.4);
+    width:3rem;
+    height: 3rem;
+    color: rgb(53, 52, 52);
+    text-align: center;
+    align-self: center;
+    p {
+        margin: 0;
+    }
+}
+.tag-content {
+    margin-left: 1.5rem;
+}
 @media (min-width: 768px) {
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
