--- a/app/views/application/_posts_form.html.erb
+++ b/app/views/application/_posts_form.html.erb
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="post-main">
-                        <p><%= post.content %></p>
+                        <p><%= render_with_tags(post.content) %></p>
                     </div>
                 </div>
 
