--- a/app/views/users/_good_post_form.html.erb
+++ b/app/views/users/_good_post_form.html.erb
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="post-main">
-                        <p><%= post.content %></p>
+                        <p><%= render_with_tags(post.content) %></p>
                     </div>
                 </div>
 
